# os-installer

./: .gitignore  LICENSE  README.md  TODO.md  com.github.p3732.OS-Installer.json  meson.build  meson_options.txt
.build_files/: contributors  meson.build  os-installer-demo  translators
data/: com.github.p3732.OS-Installer.appdata.xml.in  com.github.p3732.OS-Installer.desktop.in  com.github.p3732.OS-Installer.gschema.xml  meson.build
data/app_icon/: meson.build
data/resources/: meson.build  os-installer.gresource.xml  os_installer.gresource.xml  style.css
data/resources/css/: style.css
data/resources/json/: supported_languages.json
data/resources/ui/: about_dialog.ui.in  confirm_quit_popup.blp  confirm_quit_popup.ui  disk_confirmation_dialog.ui  failed_installation_popup.ui  main_stack.ui  main_window.blp  main_window.ui  meson.build  timezone_window.ui
data/resources/ui/pages/: additional_software.ui  confirm.blp  confirm.ui  copy.ui  disk.blp  disk.ui  done.blp  done.ui  encrypt.blp  encrypt.ui  failed.blp  failed.ui  feature.blp  format.blp  install.blp  install.ui  internet.blp  internet.ui  keyboard_layout.blp  keyboard_layout.ui  language.blp  language.ui  locale.blp  locale.ui  restart.blp  restart.ui  software.blp  software.ui  summary.blp  timezone.blp  user.blp  user.ui  welcome.blp
data/resources/ui/widgets/: back_row.ui  device_row.blp  device_row.ui  disk_back_row.ui  disk_row.ui  disk_too_small_row.ui  formats_chooser.ui  horizontally_scrollable_list.blp  horizontally_scrollable_list.ui  keyboard_layout_back_row.ui  label_row.ui  language_row.blp  language_row.ui  no_partitions_row.blp  no_partitions_row.ui  page_wrapper.blp  partition_row.ui  partition_too_small_row.ui  progress_row.blp  progress_row.ui  selection_row.blp  selection_row.ui  software_row.blp  software_row.ui  software_summary_row.blp  timezone_chooser.ui  timezone_choser.ui  whole_disk_row.ui
doc/: OS-Installation procedure.md  class hierarchy.dia
example_config/: config.yaml
example_config/scripts/: configure.sh  install.sh  installer.sh  prepare.sh
po/: LINGUAS  OS-Installer.pot  POTFILES  cs.po  de.po  es.po  et.po  fr.po  hr.po  it.po  ka.po  meson.build  nl.po  oc.po  os-installer.pot  pl.po  pt_BR.po  sv.po  uk.po
scripts/: language_codes_to_locales.py  language_codes_to_x_generator.py
src/: config.py  global_state.py  main.py  main_stack.py  meson.build  os-installer.in  widgets.py  window.py
src/pages/: confirm.py  disk.py  encrypt.py  install.py  internet.py  keyboard_layout.py  language.py  locale.py  restart.py  software.py  user.py
src/provider/: disk_provider.py  feature_provider.py  format_provider.py  language_provider.py  locale_provider.py  software_provider.py  timezone_provider.py
src/ui/: about_dialog.py  confirm_quit_popup.py  failed_installation_popup.py  formats_chooser.py  main_stack.py  page.py  stack_manager.py  timezone_chooser.py  timezone_choser.py  timezone_window.py  widgets.py  window.py
src/ui/pages/: confirm.py  disk.py  done.py  encrypt.py  failed.py  feature.py  format.py  install.py  internet.py  keyboard_layout.py  language.py  locale.py  restart.py  software.py  summary.py  timezone.py  user.py  welcome.py
src/util/: disk_provider.py  installation_scripting.py  internet_provider.py  keyboard_layout_provider.py  language_provider.py  locale_provider.py  scripting_provider.py  software_provider.py  system_calls.py  system_provider.py  thread_manager.py  thread_provider.py
src/util/provider/: disk_provider.py  internet_provider.py  keyboard_layout_provider.py  language_provider.py  locale_provider.py  software_provider.py
