artists = run_command(
  'cat', files('artists'),
).stdout().strip()

contributors = run_command(
  'cat', files('contributors'),
).stdout().strip()

documenters = run_command(
  'cat', files('documenters'),
).stdout().strip()

translators = run_command(
  'cat', files('translators'),
).stdout().strip()

